# adcpreader

./: .gitignore  README.md  pyproject.toml
devel/: devel.py  missing_pings.py  pitch_and_roll.py
src/adcpreader/: __init__.py  rdi_info.py  rdi_qc.py  rdi_reader.py  rdi_writer.py
