[project]
name = "adcpreader"
version = "0.1.0"
description = "adcpreader: a python module for reading and processing RDI ADCP data files."
readme = "README.md"
authors = [
    { name = "Lucas Merckelbach", email = "lucas.merckelbach@hereon.de" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
